# snakemonkey

./: .gitignore  README.md  pyproject.toml
snakemonkey/: client.py  snakemonkey.py  survey.py  transformer.py  utils.py
tests/: test_transformer.py
