[tool.poetry]
name = "snakemonkey"
version = "0.1.0"
description = ""
authors = ["Christopher Remmel <40274075+calremmel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
orjson = "^3.8.7"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
jupyterlab-code-formatter = "^1.5.3"
tdqm = "^0.0.1"
tabulate = "^0.9.0"
polars = "^0.16.18"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"
black = "^23.1.0"
pytest = "^7.2.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
jupyterlab-lsp = "^3.10.2"
python-lsp-server = {extras = ["all"], version = "^1.7.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
