[tool.poetry]
name = "snakemonkey"
version = "0.1.0"
description = ""
authors = ["Christopher Remmel <40274075+calremmel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
orjson = "^3.8.7"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
jupyterlab-code-formatter = "^1.5.3"
tqdm = "*"
tabulate = "^0.9.0"
polars = "^0.16.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
