[tool.poetry]
name = "snakemonkey"
version = "0.1.1"
description = ""
authors = ["Christopher Remmel <40274075+calremmel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
orjson = "^3.8.7"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
tqdm = "*"
tabulate = "^0.9.0"
polars = "^0.16.18"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
